--- a/Value_Test/index.html
+++ b/Value_Test/index.html
@@ -1,9 +1,9 @@
-index.html<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>가치관 검사</title>
+  <title>Value_Test</title>
   <link rel="stylesheet" href="style.css"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
